removed target blank from jobs page so that jobs don’t open in new window and fixed blog title font size on mobile

--- a/stylesheets/blog.scss
+++ b/stylesheets/blog.scss
@@ -866,9 +866,9 @@ img {
  .post-title {
     color: black;
     font-family: "Tiempose-Semibold";
-    font-size: 45px !important;
+    font-size: 42px !important;
     margin-top: 10px;
-    padding-right: 20px;
+    padding-right: 0px;
 }
 	.blog-content {
 		margin-top: 40px;
@@ -1456,6 +1456,10 @@ ul.blog-action-list {
 // WEBPACK FOOTER //
 // webpack:///stylesheets/Users/jpimenta/pheno-com/stylesheets/blog.scss
 
+
+
+// WEBPACK FOOTER //
+// webpack:///stylesheets/Users/jpimenta/pheno-com/stylesheets/blog.scss
 
 
 // WEBPACK FOOTER //
